--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -101,8 +101,9 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 52px;
-  margin: 10px 50px;
+  max-width: 20%;
+  height: auto;
+  margin: 10px 20px;
 }
 
 .header .logo h1 {
@@ -119,11 +120,12 @@ h6 {
 .scrolled .header {
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .header {
     position: sticky;
   }
   .header .logo img {
+    max-width: 40%;
     margin: 10px 20px;
   }
 }
@@ -303,7 +305,7 @@ h6 {
   font-size: 18px;
 }
 .footer .logo img {
-  max-height: 50px;
+  max-width: 50%;
   margin-right: 8px;
   color: white;
 }
@@ -334,6 +336,9 @@ h6 {
   color: var(--accent-color);
   border-color: var(--accent-color);
   background-color:#78A53D;
+}
+@media screen {
+  
 }
 
 /*--------------------------------------------------------------
@@ -451,7 +456,7 @@ section,
 }
 
 .hero .hero-content {
-  margin-top: 0;
+  margin-top: 60px;
 }
 
 .hero .hero-content h4 {
@@ -459,7 +464,7 @@ section,
 }
 
 .hero h2 {
-  font-size: 42px;
+  font-size: 45px;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -555,7 +560,7 @@ section,
 }
   
 
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .hero {
     width: 100%;
     position: relative;
@@ -625,7 +630,7 @@ section,
   margin: 0;
   font-size: 18px;
 }
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .about .content {
     margin-left:15px ;
     margin-right: 15px;
@@ -745,7 +750,7 @@ section,
   font-size: 20px;
   color: #304218;
 }
-@media (max-width: 640px){
+@media (max-width: 768px){
   .features .feature-box-main{
    margin: 0 0 20px 0;
   }
@@ -805,7 +810,7 @@ section,
 .testimonial .testimonial-role {
   font-size: 15px;
 }
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .testimonial .testimonial-image{
     position: relative;
     left: 0;
