--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,7 +93,7 @@ h6 {
   padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
-  height: 80px;
+  height: 95px;
 }
 
 .header .logo {
@@ -101,7 +101,7 @@ h6 {
 }
 
 .header .logo img {
-  max-width: 20%;
+  width: 132px;
   height: auto;
   margin: 10px 20px;
 }
@@ -302,7 +302,8 @@ h6 {
 }
 .footer h5{
   color: white;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
 }
 .footer .logo img {
   max-width: 50%;
@@ -312,18 +313,22 @@ h6 {
 .footer .logo-box{
   padding-left: 25px;
 }
-
+.footer ul li a{
+  color: white;
+}
 .footer .copyright p {
   margin-bottom: 0;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .footer .social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  width: 27.73px;
+  height: 27.73px;
+  border-radius: 138.64px;
   border: 1px solid color-mix(in srgb, var(--default-color), transparent 50%);
   font-size: 16px;
   color: color-mix(in srgb, var(--default-color), transparent 50%);
@@ -459,12 +464,13 @@ section,
   margin-top: 60px;
 }
 
-.hero .hero-content h4 {
+.hero .hero-content h5 {
   margin-bottom: 20px;
+  color: #608431;
 }
 
 .hero h2 {
-  font-size: 45px;
+  font-size: 52px;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -475,7 +481,7 @@ section,
 
 .scrolling-text-container {
   position: relative;
-  height: 100px;
+  height: 77px;
   overflow: hidden;
   text-align: left;
 }
@@ -484,9 +490,8 @@ section,
   position: absolute;
   width: 100%;
   margin: 0;
-  font-size: 24px;
   font-weight: bold;
-  line-height: 80px;
+  line-height: 77px;
   color: #608431;
   transition: transform 1s ease-in-out;
 }
@@ -506,6 +511,7 @@ section,
 .hero p {
   color: var(--default-color);
   font-weight: 400;
+  font-size: 20px;
   margin-bottom: 40px;
 }
 
@@ -513,12 +519,12 @@ section,
   color: #1D280F;
   background-color: #90C649;
   font-family: var(--heading-font);
-  font-weight: 500;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 20px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 12px 36px;
-  border-radius: 50px;
+  padding: 16px 32px;
+  border-radius: 8px;
   transition: 0.5s;
   box-shadow: 0 8px 28px rgba(0, 0, 0, 0.1);
 }
@@ -600,9 +606,33 @@ section,
   height: 100%;
   
 
-}/* Container for the steps */
+}
 
+/* Container for the steps */
+.line {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-left: 20px;
+  /* Add padding for proper alignment */
+}
 
+/* Line that connects the circles */
+.line::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 8%;
+  /* Align the line with the center of the circles */
+  transform: translateX(-50%);
+  /* Center it exactly */
+  width: 2px;
+  height: 100%;
+  background-color: #608431;
+  /* Match the circle's color */
+  z-index: 0;
+  /* Place behind the circles */
+}
 /* Individual step */
 .step {
   display: flex;
@@ -614,21 +644,23 @@ section,
 .circle {
   background-color: #608431;
   color: white;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 20px;
-  width: 45px;
-  height: 45px;
+  width: 52px;
+  height: 52px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+  border-radius: 200%;
   margin-right: 10px;
+  z-index: 1;
 }
 
 /* Text styling */
 .step p {
   margin: 0;
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
 }
 @media (max-width: 768px) {
   .about .content {
@@ -657,7 +689,7 @@ section,
 }
 
 .title h2 {
-  font-size: 45px;
+  font-size: 48px;
   font-weight: 700;
   color: #608431;
   margin: 30px 0 0 0;
@@ -679,19 +711,19 @@ section,
   margin: 0;
   width: 64px;
   height: 64px;
-  border-radius: 50px;
+  border-radius: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  font-size: 28px;
+  font-size: 30px;
   transition: ease-in-out 0.3s;
 }
 
 .services .service-item h3 {
   font-weight: 700;
   margin: 10px 0 15px 0;
-  font-size: 22px;
+  font-size: 24px;
   transition: ease-in-out 0.3s;
   color: #608431;
 }
@@ -724,7 +756,7 @@ section,
 .features .feature-box {
   display: flex;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 8px;
   transition: 0.3s;
 }
 .features .feature-box.item .icon {
@@ -741,8 +773,8 @@ section,
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 72px;
-  height: 72px;
+  width: 64px;
+  height: 64px;
   flex-shrink: 0;
   color: #608431;
 }
@@ -769,7 +801,7 @@ section,
   padding: 40px 20px;
   margin: 30px 10px;
   background-color: #ffffff;
-  border-radius: 10px;
+  border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   position: relative;
   width: 100%;
@@ -778,24 +810,25 @@ section,
 }
 .testimonial .testimonial-item .quote-icon {
   position: absolute;
-  top: -40px;
+  top: -50px;
   left: 10px;
   color: #608431;
-  font-size: 60px;
+  font-size: 72px;
 }
 .testimonial .testimonial-image {
   width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 200%;
   object-fit: cover;
   margin-bottom: 15px;
   position: absolute;
-  top: 40px;
+  top: 30px;
   left: 65%;
 }
 
 .testimonial .testimonial-quote {
   font-size: 20px;
+  font-weight: 400;
   padding-right: 50px;
   width: 70%;
 }
@@ -803,12 +836,14 @@ section,
 .testimonial .testimonial-name {
   font-weight: bold;
   color: #64a10e;
-  font-size: 25px;
+  font-size: 24px;
+  font-weight: 600;
   
 }
 
 .testimonial .testimonial-role {
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 400;
 }
 @media (max-width: 768px) {
   .testimonial .testimonial-image{
