--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,6 +124,7 @@ h6 {
 @media (max-width: 768px) {
   .header {
     position: sticky;
+    height: 40px;
   }
 
   .header .logo img {
@@ -475,7 +476,7 @@ section,
   width: 100%;
   position: relative;
   padding: 100px 0 100px 0;
-  ackground-color: #E9F4DB;
+  background-color: #E9F4DB;
   background-image: url("../img/new-bg.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -606,7 +607,7 @@ section,
   height: 100%;
   margin-top: 0;
 }
-
+ 
 
 @media (max-width: 768px) {
   .hero {
@@ -617,12 +618,13 @@ section,
   }
 
   .hero h2 {
-    font-size: 36px;
+    font-size: 24px;
   }
 
   .hero .btn-get-started,
   .hero .btn-watch-video {
-    font-size: 14px;
+  
+    padding: 4px 8px;
   }
 
   .hero .container {
@@ -649,7 +651,6 @@ section,
 }
 .about .about-images img {
   border-radius: 200px;
-  eight: 100%;
   object-fit: cover;
 
 
@@ -712,6 +713,16 @@ section,
 }
 
 @media (max-width: 768px) {
+  .about .container{
+    padding: 0px 50px;
+  }
+  .about .about-images img {
+    border-radius: 100px;
+    width: 100%;
+    height: auto;
+    
+  }
+
   .about .content {
     margin-left: 15px;
     margin-right: 15px;
@@ -724,9 +735,13 @@ section,
   }
 
   .circle {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     font-size: 15px;
+  }
+
+  .line{
+    padding-left: 0px;
   }
 
 }
@@ -891,6 +906,11 @@ section,
   .call-to-action .container {
     padding: 50px;
   }
+  .call-to-action .img img {
+    border-radius: 100px;
+    width: 100%;
+    height: auto;
+  }
 }
 
 /*--------------------------------------------------------------testimonial
@@ -968,7 +988,8 @@ section,
   }
 
   .testimonial .testimonial-quote {
-    padding: 0;
+    padding: 0 20px;
     width: fit-content;
+
   }
 }
