--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -327,8 +327,9 @@ h6 {
 }
 .footer .copyright{
   display: flex;
-    justify-content: space-between;
-    align-items: center;
+  float: left;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer .copyright p {
@@ -337,6 +338,10 @@ h6 {
   font-weight: 400;
   margin-left: 20px;
 }
+/* .footer .social-links {
+  float: right !important; 
+
+} */
 
 .footer .social-links a {
   display: flex;
@@ -661,7 +666,8 @@ section,
   display: flex;
   flex-direction: column;
   position: relative;
-  padding-left: 20px;
+  padding-left: 10px;
+  
   /* Add padding for proper alignment */
 }
 
@@ -687,6 +693,7 @@ section,
   display: flex;
   align-items: center;
   margin: 10px 0;
+  /* background-color: blue; */
 }
 
 /* Circle for numbering */
@@ -697,14 +704,20 @@ section,
   font-size: 20px;
   width: 52px;
   height: 52px;
+  /* padding: 26px; */
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 200%;
+  border-radius: 26px;
   margin-right: 10px;
   z-index: 1;
 }
-
+.circle + div{
+   float: left;
+   margin-left: 70px;
+   margin-top: -40px;
+}
 /* Text styling */
 .step p {
   margin: 0;
@@ -925,7 +938,7 @@ section,
 
 .testimonial .testimonial-item {
   padding: 40px 20px;
-  margin: 30px 10px;
+  margin: 30px 0px;
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -934,7 +947,9 @@ section,
   box-sizing: content-box;
 
 }
-
+.testimonial .quote-div{
+  height: 120px;
+}
 .testimonial .testimonial-item .quote-icon {
   position: absolute;
   top: -50px;
