--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -776,7 +776,7 @@ section,
   display: flex;
   flex-direction: column;
   position: relative;
-  padding-left: 14px;
+  padding-left: 20px;
 
   /* Add padding for proper alignment */
 }
@@ -866,10 +866,14 @@ section,
     margin-right: 0;
 
   }
+  .about .about-images {
+    order: 2;
+  }
 
   .about .content {
     padding: 0px;
-    margin: 0px
+    margin: 0px;
+    order: 1;
   }
 
   .about .content p {
