--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -534,7 +534,7 @@ section,
   position: relative;
   padding: 100px 0 100px 0;
   background-color: #E9F4DB;
-  background-image: url("../img/hero-backgroundy.jpeg");
+  background-image: url("../img/new-bgg.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
 }
