--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -593,26 +593,17 @@ section,
   transform: translateY(0);
 }
 
-/* @media only screen and (max-width: 768px) {
-  #second-h2 {
-    display: none;
-  }
-} */
-
 @media (max-width: 768px) {
   .scrolling-text-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    /* Add spacing between headings */
   }
 
   .scrolling-text-container .heading {
     position: static;
-    /* Remove absolute positioning for stacking */
     transform: none;
-    /* Remove transform animations */
     line-height: normal;
     margin: 0;
   }
@@ -621,14 +612,6 @@ section,
   #first-h2 {
     content: "Talent Mobility";
   }
-
-  /* #second-h2::before {
-    content: " Settlement";
-  } */
-
-  /* #second-h2::after {
-    content: "& Settlement";
-  } */
 }
 
 .hero p {
@@ -890,9 +873,9 @@ section,
   margin: 30px 0 50px 0;
 }
 
-.title p {
+/* .title p {
   font-size: 20px;
-}
+} */
 
 .services {
   margin: 0px 50px;
